# ros2_ws

./: .gitignore  README.md  analyze_goal_run.py  debug.py  extract_rosbag.py  frames_2025-02-26_15.08.48.gv  frames_2025-03-05_17.33.11.gv  frames_2025-03-10_17.29.11.gv  frames_2025-03-11_16.05.54.gv  motor_data.csv  my_map10.pgm  my_map10.yaml  my_map9.pgm  my_map9.yaml  plot_trajectory.py  sensor_node.py  slam_toolbox_params.yaml
data1/: data1_0.db3  metadata.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
src/cartographer_config/: CMakeLists.txt  package.xml
src/cmd_vel_to_joystick/: setup.cfg  setup.py
src/joy_listener/: package.xml  setup.cfg  setup.py
src/joystick_parameter/: CMakeLists.txt  package.xml
src/joystick_publisher/: setup.cfg  setup.py
src/locolization/: package.xml  setup.cfg  setup.py
src/motor_commands/: package.xml  setup.cfg  setup.py
src/motor_parameter/: CMakeLists.txt  package.xml
src/motor_serial/: setup.py
src/my_parameters/: CMakeLists.txt
src/my_slam_package/: package.xml  setup.cfg  setup.py
src/soft_robot_bringub/: CMakeLists.txt  package.xml
src/soft_robot_bringub/config/: controller_server.yaml  ekf_config.yaml  gmapping_config.yaml  my_map12.yaml  nav2_params.yaml  smac_global_planner.yaml
src/soft_robot_bringub/launch/: bringup1.launch.py  control_motion.launch.py  control_motion_autonomous.launch.py  control_motion_joystick.launch.py  mapping_and_localization.launch.py  navigation.launch.py  sensors.launch.py  soft_robot.launch.py
(+235 files in other folders)
