<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soft_robot_bringub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mernaiskander35@gmail.com">pi2</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joystick_publisher</exec_depend>
  <exec_depend>motor_commands</exec_depend>
  <exec_depend>bno055</exec_depend>
  <exec_depend>motor_serial</exec_depend>
  <exec_depend>my_slam_package</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>robot_localization</depend>
  <depend>tf2_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_dwb_controller</depend>
  <depend>nav2_behaviors</depend>

  <depend>rcl_yaml_param_parser</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
